RC 4
====

- Fixed IOC-45
  "Proxying a component that has an interface that is extended from another interface throws an exception"

- Applied patch by Ernst Naezer fixing IOC-37
  "Resolving with arguments in Windsor"

- Fixed IOC-43 
  "Creation of an Attribute in the Kernel that allows one property to be ignored by the dependency builder"
  
  Introduced DoNotWireAttribute that marks a property and prevents it
  from being considered by the container

- Changed Windsor to use DynamicProxy 2

- Applied patch by Adam Mills fixing IOC-42
  "ResolveServices", new method added to IKernel

- Applied patch by Adam Mills fixing IOC-41
  "Bug Fix BinaryTreeComponentName - Assumed Lesser nodes went to left"

- Applied patch by Adam Mills fixing IOC-40
  "Provided an Implementation for BinaryTreeComponentName.Remove"

- Applied patch by Adam Mills fixing IOC-39
  "Fix for Null Reference when accessing empty BinaryTreeComponentName"

- Fixed IOC-35 
  "Add bootstrap section to configuration file"

- Fixed issue where KeyAlreadyAdded exception would be throw for 
  components accepting two parameters of the same type, without overrides

- Fixed IOC-36 
  "Transient components with multliple constructors throw 
   unresolved dependency exceptions."

  Removed best candidate reference, as the kernel is dynamic it should
  not cache best constructors as components can be added or removed
  at any time
  
  Removed Points from candidates, as in a multithreaded scenario
  this would lead to failures
  

- Fixed IOC-34 
  "Cannot use types having their own base type as constructor argument"

  See revision r2787

- IOC-32, Support generic collections. 
  Supported collections are: ICollection<T>, IList<T>, List<T>, IDictionary<K,V>, Dictionary<K,V>, IEnumerable<T> 

RC 3
====
 
- Applied patch by William C. Pierce <wcpierce@gmail.com> adding PerWebRequestAttribute

- Added setter to ReleasePolicy property

- Applied Curtis Schlak's patch fixing IOC-30