@@ -33,7 +33,15 @@ namespace Castle.Facilities.Remoting
 			
 			RemotingRegistry registry = (RemotingRegistry) 
 				Model.ExtendedProperties["remoting.remoteregistry"];
-			
+
+
+#if DOTNET2
+			if (Model.Service.IsGenericType)
+			{
+				registry.Publish(Model.Service);
+				return RemotingServices.Connect(Model.Service, uri);
+			}
+#endif
 			registry.Publish(Model.Name);
 				
 			return RemotingServices.Connect(Model.Service, uri); 
