@@ -16,7 +16,6 @@ namespace Castle.Facilities.Remoting
 {
 	using System;
 	using System.Collections;
-	
 	using Castle.Core;
 	using Castle.MicroKernel;
 
@@ -24,7 +23,11 @@ namespace Castle.Facilities.Remoting
 	public class RemotingRegistry : MarshalByRefObject, IDisposable
 	{
 		private readonly IKernel kernel;
-		private readonly IDictionary entries = Hashtable.Synchronized( new Hashtable() );
+		private readonly IDictionary entries = Hashtable.Synchronized(new Hashtable());
+
+#if DOTNET2
+		private readonly IDictionary genericEntries = Hashtable.Synchronized(new Hashtable());
+#endif
 
 		public RemotingRegistry(IKernel kernel)
 		{
@@ -38,6 +41,13 @@ namespace Castle.Facilities.Remoting
 
 		public void AddComponentEntry(ComponentModel model)
 		{
+#if DOTNET2
+			if (model.Service.IsGenericType)
+			{
+				genericEntries[model.Service] = model;
+				return;
+			}
+#endif
 			entries[model.Name] = model;
 		}
 
@@ -57,24 +67,62 @@ namespace Castle.Facilities.Remoting
 				throw new KernelException(
 					String.Format("No remote/available component found for key {0}", key));
 			}
-			
+
 			return model;
 		}
-		
+
 		public void Publish(string key)
 		{
 			ComponentModel model = GetModel(key);
-			
+
 			MarshalByRefObject mbr = (MarshalByRefObject) kernel[key];
-			
+
 			RemoteMarshallerActivator.Marshal(mbr, model);
 		}
+
+#if DOTNET2
+		/// <summary>
+		/// Used in case of generics:
+		/// </summary>
+		/// <param name="serviceType"></param>
+		/// <returns></returns>
+		private ComponentModel GetModel(Type serviceType)
+		{
+			ComponentModel model = (ComponentModel) genericEntries[serviceType];
+
+			if (model == null)
+			{
+				throw new KernelException(
+					String.Format("No remote/available component found for service type {0}", serviceType));
+			}
+
+			return model;
+		}
+
+		public object CreateRemoteInstance(Type serviceType)
+		{
+			return kernel[serviceType];
+		}
+
+
+		public void Publish(Type serviceType)
+		{
+			ComponentModel model = GetModel(serviceType);
+
+			MarshalByRefObject mbr = (MarshalByRefObject) kernel[serviceType];
+
+			RemoteMarshallerActivator.Marshal(mbr, model);
+		}
+#endif
 
 		#region IDisposable Members
 
 		public void Dispose()
 		{
 			entries.Clear();
+#if DOTNET2
+			genericEntries.Clear();
+#endif
 		}
 
 		#endregion
